--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,12 +1,5 @@
-FROM lsstts/develop-env:develop
+FROM lsstts/simulation_tests:latest
 WORKDIR /home/saluser/repos/ts_sal
-RUN source /opt/lsst/software/stack/loadLSST.bash && setup lsst_distrib && \
-    source /home/saluser/repos/ts_sal/setup.env && \
-    eups declare -r . ts_sal -t current && \
-    setup ts_sal -t current && \
-    scons && \
-    make_salpy_libs.py ATDome ATMCS
-
 WORKDIR /usr/src/love
 COPY requirements.txt .
 RUN source /opt/lsst/software/stack/loadLSST.bash && pip install -r requirements.txt
