update sallibs names

--- a/sallibs.config
+++ b/sallibs.config
@@ -1,10 +1,2 @@
-SALPY_ATCamera
-SALPY_ATDomeTrajectory
-SALPY_ATMCS
-SALPY_ATMonochromator
-SALPY_ATPtg
-SALPY_ATSpectrograph
-SALPY_Electrometer
-SALPY_FiberSpectrograph
-SALPY_ScriptQueue 1
-SALPY_Test
+ATMCS
+ScriptQueue 1
