Reorder folder in order to pass config folder to all simulators

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -2,8 +2,9 @@ FROM lsstts/develop-env:20190610_sal3.10.0_salobj4
 
 
 WORKDIR /usr/src/love
-COPY requirements.txt .
+COPY simulator/requirements.txt .
 RUN source /opt/lsst/software/stack/loadLSST.bash && pip install -r requirements.txt
+COPY config ./config
 
 WORKDIR /home/saluser
-ENTRYPOINT ["/usr/src/love/start-daemon.sh"]
+ENTRYPOINT ["/usr/src/love/simulator/start-daemon.sh"]
