--- a/Dockerfile-atdome
+++ b/Dockerfile-atdome
@@ -1,4 +1,4 @@
-FROM lsstts/develop-env:20190610_sal3.10.0_salobj4
+FROM lsstts/develop-env:20190705_sal3.10.0_salobj
 
 COPY csc-sim/atdome-setup.sh /home/saluser/atdome-setup.sh
 COPY config /home/saluser/config
