--- a/simulator/requirements.txt
+++ b/simulator/requirements.txt
@@ -4,3 +4,12 @@ six==1.11.0
 websocket-client==0.54.0
 eventlet==0.24.1
 flake8==3.7.7
+m2r==0.2.1
+Sphinx==2.2.0
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
