Properly setup apidocs

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -5,6 +5,8 @@ WORKDIR /usr/src/love
 COPY simulator/requirements.txt .
 RUN source /opt/lsst/software/stack/loadLSST.bash && pip install -r requirements.txt
 COPY config ./config
+COPY config /home/saluser/config
 
 WORKDIR /home/saluser
-ENTRYPOINT ["/usr/src/love/simulator/start-daemon.sh"]
+# ENTRYPOINT ["/usr/src/love/simulator/start-daemon.sh"]
+CMD ["/usr/src/love/simulator/start-daemon.sh"]
