--- a/Dockerfile-atdome
+++ b/Dockerfile-atdome
@@ -1,4 +1,4 @@
-FROM lsstts/develop-env:20190705_sal3.10.0_salobj
+FROM lsstts/develop-env:salobj4_b30
 
 COPY csc_sim/atdome-setup.sh /home/saluser/atdome-setup.sh
 COPY csc_sim/atdome.py /home/saluser/atdome.py
