--- a/Dockerfile-testcsc
+++ b/Dockerfile-testcsc
@@ -1,4 +1,4 @@
-FROM lsstts/develop-env:20190705_sal3.10.0_salobj
+FROM lsstts/develop-env:salobj4_b30
 
 COPY csc_sim/testcsc-setup.sh /home/saluser/testcsc-setup.sh
 COPY csc_sim/testcsc.py /home/saluser/testcsc.py
