Update default config file

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,11 @@
 {
   "ATDome": [
     {
-      "index": 1,
+      "source": "command_sim"
+    }
+  ],
+  "ATMCS": [
+    {
       "source": "command_sim"
     }
   ],
