--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,5 +1,4 @@
-FROM lsstts/develop-env:20190705_sal3.10.0_salobj
-
+FROM lsstts/develop-env:salobj4_b61
 
 WORKDIR /usr/src/love
 COPY simulator/requirements.txt .
