--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -3,6 +3,10 @@ FROM lsstts/develop-env:salobj4_b64
 WORKDIR /usr/src/love
 COPY simulator/requirements.txt .
 RUN source /opt/lsst/software/stack/loadLSST.bash && pip install -r requirements.txt
+RUN source /opt/lsst/software/stack/loadLSST.bash \
+    && source /home/saluser/repos/ts_sal/setup.env \
+    && setup ts_sal -t current \
+    && /home/saluser/repos/ts_sal/bin/make_idl_files.py Watcher
 COPY config ./config
 COPY config /home/saluser/config
 
