--- a/Dockerfile-jupyter
+++ b/Dockerfile-jupyter
@@ -1,6 +1,7 @@
 FROM lsstts/develop-env:b31
-USER root
 WORKDIR /home/saluser/
+COPY simulator/jupyter.sh .setup.sh
+USER root
 RUN source /opt/lsst/software/stack/loadLSST.bash \
     && source /home/saluser/repos/ts_sal/setup.env \
     && setup ts_sal -t current \
