--- a/Dockerfile-jupyter
+++ b/Dockerfile-jupyter
@@ -1,8 +1,3 @@
-FROM lsstts/develop-env:b65
+FROM lsstts/develop-env:b101
 WORKDIR /home/saluser/
-COPY simulator/jupyter.sh .setup.sh
-USER root
-RUN source /opt/lsst/software/stack/loadLSST.bash \
-    && source /home/saluser/repos/ts_sal/setup.env \
-    && setup ts_sal -t current \
-    && /home/saluser/repos/ts_sal/bin/make_idl_files.py Watcher
+COPY simulator/jupyter.sh /home/saluser/setup.sh
