--- a/Dockerfile-jupyter
+++ b/Dockerfile-jupyter
@@ -1,8 +1,8 @@
-FROM lsstts/develop-env:b101
+FROM lsstts/develop-env:c0010
 WORKDIR /home/saluser/
 COPY simulator/jupyter.sh /home/saluser/setup.sh
 RUN source /opt/lsst/software/stack/loadLSST.bash \
-    && source /home/saluser/repos/ts_sal/setup.env \
+    && source /home/saluser/.setup_salobj.sh \
     && setup ts_sal -t current \
     && /home/saluser/repos/ts_sal/bin/make_idl_files.py Watcher
 
