--- a/Dockerfile-watcher
+++ b/Dockerfile-watcher
@@ -1,10 +1,10 @@
-FROM lsstts/develop-env:b101
+FROM lsstts/develop-env:c0010
 
 COPY csc_sim/watcher-setup.sh /home/saluser/watcher-setup.sh
 COPY config /home/saluser/config
 
 RUN source /opt/lsst/software/stack/loadLSST.bash \
-    && source /home/saluser/repos/ts_sal/setup.env \
+    && source /home/saluser/.setup_salobj.sh \
     && setup ts_sal -t current \
     && /home/saluser/repos/ts_sal/bin/make_idl_files.py Watcher
 
