--- a/Dockerfile-atdome
+++ b/Dockerfile-atdome
@@ -1,4 +1,4 @@
-FROM lsstts/develop-env:b101
+FROM lsstts/develop-env:c0010
 
 COPY csc_sim/atdome-setup.sh /home/saluser/atdome-setup.sh
 COPY csc_sim/atdome.py /home/saluser/atdome.py
