--- a/Dockerfile-jupyter
+++ b/Dockerfile-jupyter
@@ -1,4 +1,5 @@
-FROM lsstts/develop-env:c0010
+ARG LSSTTS_DEV_VERSION=c0010
+FROM lsstts/develop-env:${LSSTTS_DEV_VERSION}
 WORKDIR /home/saluser/
 COPY simulator/jupyter.sh /home/saluser/setup.sh
 RUN source /opt/lsst/software/stack/loadLSST.bash \
