Rename Environment CSC to WeatherStation

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -6,7 +6,7 @@ RUN source /opt/lsst/software/stack/loadLSST.bash && pip install -r requirements
 RUN source /opt/lsst/software/stack/loadLSST.bash \
     && source /home/saluser/.setup_salobj.sh \
     && setup ts_sal -t current \
-    && /home/saluser/repos/ts_sal/bin/make_idl_files.py Watcher Environment GenericCamera
+    && /home/saluser/repos/ts_sal/bin/make_idl_files.py Watcher WeatherStation GenericCamera
 COPY config ./config
 COPY config /home/saluser/config
 
