Alter docker and docker-compose files to improve lsstts/develop-e nv version setting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile-dev
+      args:
+        LSSTTS_DEV_VERSION: c0017.000
     image: love-simulator-image-mount
     volumes:
       - .:/usr/src/love
