Upgrade to lsstts/develop-env:c0018.000

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: Dockerfile-dev
       args:
-        LSSTTS_DEV_VERSION: c0017.000
+        LSSTTS_DEV_VERSION: ${dev-cycle}
     image: love-simulator-image-mount
     volumes:
       - .:/usr/src/love
