--- a/Dockerfile-atmcs
+++ b/Dockerfile-atmcs
@@ -1,5 +1,5 @@
-ARG LSSTTS_DEV_VERSION=develop
-FROM lsstts/develop-env:${LSSTTS_DEV_VERSION}
+ARG dev_cycle=develop
+FROM lsstts/develop-env:${dev_cycle}
 
 COPY csc_sim/atmcs-setup.sh /home/saluser/atmcs-setup.sh
 COPY csc_sim/atmcs.py /home/saluser/atmcs.py
