--- a/Dockerfile-jupyter
+++ b/Dockerfile-jupyter
@@ -1,5 +1,5 @@
-ARG LSSTTS_DEV_VERSION=develop
-FROM lsstts/develop-env:${LSSTTS_DEV_VERSION}
+ARG dev_cycle=develop
+FROM lsstts/develop-env:${dev_cycle}
 WORKDIR /home/saluser/
 COPY simulator/jupyter.sh /home/saluser/setup.sh
 RUN source /opt/lsst/software/stack/loadLSST.bash \
