--- a/Dockerfile-testcsc
+++ b/Dockerfile-testcsc
@@ -1,5 +1,5 @@
-ARG LSSTTS_DEV_VERSION=develop
-FROM lsstts/develop-env:${LSSTTS_DEV_VERSION}
+ARG dev_cycle=develop
+FROM lsstts/develop-env:${dev_cycle}
 
 COPY csc_sim/testcsc-setup.sh /home/saluser/testcsc-setup.sh
 COPY csc_sim/testcsc.py /home/saluser/testcsc.py
