--- a/Dockerfile-weatherstation
+++ b/Dockerfile-weatherstation
@@ -1,6 +1,6 @@
-ARG LSSTTS_DEV_VERSION=develop
+ARG dev_cycle=develop
 ARG WEATHERSTATION_VERSION=v1.1.1
-FROM lsstts/develop-env:${LSSTTS_DEV_VERSION}
+FROM lsstts/develop-env:${dev_cycle}
 
 COPY environment_setup.sh /home/saluser/setup.sh
 COPY csc_sim/weatherstation-setup.sh /home/saluser/weatherstation-setup.sh
