--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: Dockerfile-dev
       args:
-        LSSTTS_DEV_VERSION: ${dev-cycle}
+        dev_cycle: ${dev_cycle}
     image: love-simulator-image-mount
     volumes:
       - .:/usr/src/love
