Add standard and external scripts copy to scriptqueue-sim build

--- a/Dockerfile-scriptqueue
+++ b/Dockerfile-scriptqueue
@@ -4,5 +4,9 @@ FROM lsstts/develop-env:${dev_cycle}
 COPY csc_sim/scriptqueue-setup.sh /home/saluser/scriptqueue-setup.sh
 COPY csc_sim/scriptqueue.py /home/saluser/scriptqueue.py
 COPY config /home/saluser/config
+
+RUN cp -R /home/saluser/repos/ts_standardscripts/scripts/ /home/saluser/repos/ts_scriptqueue/tests/data/standard/scripts/
+RUN cp -R /home/saluser/repos/ts_externalscripts/scripts/ /home/saluser/repos/ts_scriptqueue/tests/data/external/scripts/
+
 WORKDIR /home/saluser
 ENTRYPOINT ["/home/saluser/scriptqueue-setup.sh"]
