--- a/docker/Dockerfile-watcher
+++ b/docker/Dockerfile-watcher
@@ -1,6 +1,4 @@
 ARG dev_cycle=develop
-ARG WATCHER_VERSION=v1.8.0
-
 FROM lsstts/develop-env:${dev_cycle}
 
 COPY csc_sim/watcher-setup.sh /home/saluser/watcher-setup.sh
@@ -13,6 +11,6 @@ RUN source /opt/lsst/software/stack/loadLSST.bash \
 
 RUN git clone https://github.com/lsst-ts/ts_watcher.git  /home/saluser/repos/ts_watcher
 
-RUN cd /home/saluser/repos/ts_watcher && git checkout ${WATCHER_VERSION}
+RUN cd /home/saluser/repos/ts_watcher
 ENTRYPOINT ["/bin/bash", "--"]
 CMD ["/home/saluser/watcher-setup.sh"]
